# memorc

./: .gitignore  CMakeLists.txt  README.md
cmake/: memorcConfig.cmake.in
include/memorc/: copy_task.h  i_task.h  memorc.h  memory_profiler.h  task_queue.h  worker.h  worker_pool.h
src/: copy_task.cpp  memorc.cpp  memory_profiler.cpp  task_queue.cpp  worker.cpp  worker_pool.cpp
tests/: CMakeLists.txt  test_main.cpp
